Fix Start Queue on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -89,4 +89,8 @@ code {
   .AdminLayout .logo-icon-end-queue {
     display: none;
   }
+
+  .AdminLayout .start-queue-store {
+    margin-top: 0px;
+  }
 }
